--- a/management/static/leader-profile.css
+++ b/management/static/leader-profile.css
@@ -365,3 +365,7 @@
     transform-origin: 100% 100%;
     margin-right: 50px;
 }
+
+#leader-profile-edit-form-header-title-right{
+    float: right;
+}
